finish phase1 of todos part 2

--- a/todo_project/index.html
+++ b/todo_project/index.html
@@ -5,7 +5,7 @@
         <title>Todo App</title>
     </head>
     <body>
-        <div id="main"></div>
+        <div id="content"></div>
         <script src="./dist/bundle.js"></script>
     </body>
 </html>
